@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2014 The Android Open Source Project
- * Copyright (c) 1997, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -34,6 +34,7 @@ import dalvik.annotation.compat.VersionCodes;
 import dalvik.system.VMRuntime;
 
 import jdk.internal.util.ArraysSupport;
+import jdk.internal.vm.annotation.ForceInline;
 import jdk.internal.vm.annotation.IntrinsicCandidate;
 
 import java.io.Serializable;
@@ -80,7 +81,7 @@ import java.util.stream.StreamSupport;
  * @author John Rose
  * @since  1.2
  */
-public class Arrays {
+public final class Arrays {
 
     // Suppresses default constructor, ensuring non-instantiability.
     private Arrays() {}
@@ -2420,7 +2421,18 @@ public class Arrays {
         if (a2.length != length)
             return false;
 
-        return ArraysSupport.mismatch(a, a2, length) < 0;
+        // BEGIN Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
+        // TODO(b/362153334) Assess whether it's worth writing intrinsics or not.
+        // return ArraysSupport.mismatch(a, a2, length) < 0;
+        for (int idx = 0; idx < length; ++idx) {
+            if (a[idx] != a2[idx]) {
+                return false;
+            }
+        }
+        return true;
+        // END Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
     }
 
     /**
@@ -2465,9 +2477,22 @@ public class Arrays {
         if (aLength != bLength)
             return false;
 
+        // BEGIN Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
+        // TODO(b/362153334) Assess whether it's worth writing intrinsics or not.
+        /*
         return ArraysSupport.mismatch(a, aFromIndex,
                                       b, bFromIndex,
                                       aLength) < 0;
+        */
+        for (int idx = 0; idx < aLength; ++idx) {
+            if (a[aFromIndex++] != b[bFromIndex++]) {
+                return false;
+            }
+        }
+        return true;
+        // END Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
     }
 
     /**
@@ -2492,7 +2517,18 @@ public class Arrays {
         if (a2.length != length)
             return false;
 
-        return ArraysSupport.mismatch(a, a2, length) < 0;
+        // BEGIN Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
+        // TODO(b/362153334) Assess whether it's worth writing intrinsics or not.
+        // return ArraysSupport.mismatch(a, a2, length) < 0;
+        for (int idx = 0; idx < length; ++idx) {
+            if (a[idx] != a2[idx]) {
+                return false;
+            }
+        }
+        return true;
+        // END Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
     }
 
     /**
@@ -2537,9 +2573,22 @@ public class Arrays {
         if (aLength != bLength)
             return false;
 
+        // BEGIN Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
+        // TODO(b/362153334) Assess whether it's worth writing intrinsics or not.
+        /*
         return ArraysSupport.mismatch(a, aFromIndex,
                                       b, bFromIndex,
                                       aLength) < 0;
+        */
+        for (int idx = 0; idx < aLength; ++idx) {
+            if (a[aFromIndex++] != b[bFromIndex++]) {
+                return false;
+            }
+        }
+        return true;
+        // END Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
     }
 
     /**
@@ -2554,7 +2603,7 @@ public class Arrays {
      * @param a2 the other array to be tested for equality
      * @return {@code true} if the two arrays are equal
      */
-    public static boolean equals(short[] a, short a2[]) {
+    public static boolean equals(short[] a, short[] a2) {
         if (a==a2)
             return true;
         if (a==null || a2==null)
@@ -2564,7 +2613,18 @@ public class Arrays {
         if (a2.length != length)
             return false;
 
-        return ArraysSupport.mismatch(a, a2, length) < 0;
+        // BEGIN Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
+        // TODO(b/362153334) Assess whether it's worth writing intrinsics or not.
+        // return ArraysSupport.mismatch(a, a2, length) < 0;
+        for (int idx = 0; idx < length; ++idx) {
+            if (a[idx] != a2[idx]) {
+                return false;
+            }
+        }
+        return true;
+        // END Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
     }
 
     /**
@@ -2609,9 +2669,22 @@ public class Arrays {
         if (aLength != bLength)
             return false;
 
+        // BEGIN Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
+        // TODO(b/362153334) Assess whether it's worth writing intrinsics or not.
+        /*
         return ArraysSupport.mismatch(a, aFromIndex,
                                       b, bFromIndex,
                                       aLength) < 0;
+        */
+        for (int idx = 0; idx < aLength; ++idx) {
+            if (a[aFromIndex++] != b[bFromIndex++]) {
+                return false;
+            }
+        }
+        return true;
+        // END Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
     }
 
     /**
@@ -2637,7 +2710,18 @@ public class Arrays {
         if (a2.length != length)
             return false;
 
-        return ArraysSupport.mismatch(a, a2, length) < 0;
+        // BEGIN Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
+        // TODO(b/362153334) Assess whether it's worth writing intrinsics or not.
+        // return ArraysSupport.mismatch(a, a2, length) < 0;
+        for (int idx = 0; idx < length; ++idx) {
+            if (a[idx] != a2[idx]) {
+                return false;
+            }
+        }
+        return true;
+        // END Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
     }
 
     /**
@@ -2682,9 +2766,22 @@ public class Arrays {
         if (aLength != bLength)
             return false;
 
+        // BEGIN Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
+        // TODO(b/362153334) Assess whether it's worth writing intrinsics or not.
+        /*
         return ArraysSupport.mismatch(a, aFromIndex,
                                       b, bFromIndex,
                                       aLength) < 0;
+        */
+        for (int idx = 0; idx < aLength; ++idx) {
+            if (a[aFromIndex++] != b[bFromIndex++]) {
+                return false;
+            }
+        }
+        return true;
+        // END Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
     }
 
     /**
@@ -2710,7 +2807,18 @@ public class Arrays {
         if (a2.length != length)
             return false;
 
-        return ArraysSupport.mismatch(a, a2, length) < 0;
+        // BEGIN Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
+        // TODO(b/362153334) Assess whether it's worth writing intrinsics or not.
+        // return ArraysSupport.mismatch(a, a2, length) < 0;
+        for (int idx = 0; idx < length; ++idx) {
+            if (a[idx] != a2[idx]) {
+                return false;
+            }
+        }
+        return true;
+        // END Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
     }
 
     /**
@@ -2755,9 +2863,22 @@ public class Arrays {
         if (aLength != bLength)
             return false;
 
+        // BEGIN Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
+        // TODO(b/362153334) Assess whether it's worth writing intrinsics or not.
+        /*
         return ArraysSupport.mismatch(a, aFromIndex,
                                       b, bFromIndex,
                                       aLength) < 0;
+        */
+        for (int idx = 0; idx < aLength; ++idx) {
+            if (a[aFromIndex++] != b[bFromIndex++]) {
+                return false;
+            }
+        }
+        return true;
+        // END Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
     }
 
     /**
@@ -2782,7 +2903,18 @@ public class Arrays {
         if (a2.length != length)
             return false;
 
-        return ArraysSupport.mismatch(a, a2, length) < 0;
+        // BEGIN Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
+        // TODO(b/362153334) Assess whether it's worth writing intrinsics or not.
+        // return ArraysSupport.mismatch(a, a2, length) < 0;
+        for (int idx = 0; idx < length; ++idx) {
+            if (a[idx] != a2[idx]) {
+                return false;
+            }
+        }
+        return true;
+        // END Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
     }
 
     /**
@@ -2827,9 +2959,23 @@ public class Arrays {
         if (aLength != bLength)
             return false;
 
+        // BEGIN Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
+        // TODO(b/362153334) Assess whether it's worth writing intrinsics or not.
+        /*
         return ArraysSupport.mismatch(a, aFromIndex,
                                       b, bFromIndex,
                                       aLength) < 0;
+        */
+        for (int idx = 0; idx < aLength; ++idx) {
+            if (a[aFromIndex++] != b[bFromIndex++]) {
+                return false;
+            }
+        }
+
+        return true;
+        // END Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
     }
 
     /**
@@ -2841,7 +2987,7 @@ public class Arrays {
      * two array references are considered equal if both are {@code null}.
      *
      * Two doubles {@code d1} and {@code d2} are considered equal if:
-     * <pre>    {@code new Double(d1).equals(new Double(d2))}</pre>
+     * <pre>    {@code Double.valueOf(d1).equals(Double.valueOf(d2))}</pre>
      * (Unlike the {@code ==} operator, this method considers
      * {@code NaN} equal to itself, and 0.0d unequal to -0.0d.)
      *
@@ -2860,7 +3006,18 @@ public class Arrays {
         if (a2.length != length)
             return false;
 
-        return ArraysSupport.mismatch(a, a2, length) < 0;
+        // BEGIN Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
+        // TODO(b/362153334) Assess whether it's worth writing intrinsics or not.
+        // return ArraysSupport.mismatch(a, a2, length) < 0;
+        for (int idx = 0; idx < length; ++idx) {
+            if (Double.doubleToLongBits(a[idx]) != Double.doubleToLongBits(a2[idx])) {
+                return false;
+            }
+        }
+        return true;
+        // END Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
     }
 
     /**
@@ -2874,7 +3031,7 @@ public class Arrays {
      * in the same order.
      *
      * <p>Two doubles {@code d1} and {@code d2} are considered equal if:
-     * <pre>    {@code new Double(d1).equals(new Double(d2))}</pre>
+     * <pre>    {@code Double.valueOf(d1).equals(Double.valueOf(d2))}</pre>
      * (Unlike the {@code ==} operator, this method considers
      * {@code NaN} equal to itself, and 0.0d unequal to -0.0d.)
      *
@@ -2911,8 +3068,22 @@ public class Arrays {
         if (aLength != bLength)
             return false;
 
+        // BEGIN Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
+        // TODO(b/362153334) Assess whether it's worth writing intrinsics or not.
+        /*
         return ArraysSupport.mismatch(a, aFromIndex,
                                       b, bFromIndex, aLength) < 0;
+        */
+        for (int idx = 0; idx < aLength; ++idx) {
+            if (Double.doubleToLongBits(a[aFromIndex++]) !=
+                    Double.doubleToLongBits(b[bFromIndex++])) {
+                return false;
+            }
+        }
+        return true;
+        // END Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
     }
 
     /**
@@ -2924,7 +3095,7 @@ public class Arrays {
      * two array references are considered equal if both are {@code null}.
      *
      * Two floats {@code f1} and {@code f2} are considered equal if:
-     * <pre>    {@code new Float(f1).equals(new Float(f2))}</pre>
+     * <pre>    {@code Float.valueOf(f1).equals(Float.valueOf(f2))}</pre>
      * (Unlike the {@code ==} operator, this method considers
      * {@code NaN} equal to itself, and 0.0f unequal to -0.0f.)
      *
@@ -2942,8 +3113,18 @@ public class Arrays {
         int length = a.length;
         if (a2.length != length)
             return false;
-
-        return ArraysSupport.mismatch(a, a2, length) < 0;
+        // BEGIN Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
+        // TODO(b/362153334) Assess whether it's worth writing intrinsics or not.
+        // return ArraysSupport.mismatch(a, a2, length) < 0;
+        for (int idx = 0; idx < length; ++idx) {
+            if (Float.floatToIntBits(a[idx]) != Float.floatToIntBits(a2[idx])) {
+                return false;
+            }
+        }
+        return true;
+        // END Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
     }
 
     /**
@@ -2957,7 +3138,7 @@ public class Arrays {
      * in the same order.
      *
      * <p>Two floats {@code f1} and {@code f2} are considered equal if:
-     * <pre>    {@code new Float(f1).equals(new Float(f2))}</pre>
+     * <pre>    {@code Float.valueOf(f1).equals(Float.valueOf(f2))}</pre>
      * (Unlike the {@code ==} operator, this method considers
      * {@code NaN} equal to itself, and 0.0f unequal to -0.0f.)
      *
@@ -2994,8 +3175,21 @@ public class Arrays {
         if (aLength != bLength)
             return false;
 
+        // BEGIN Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
+        // TODO(b/362153334) Assess whether it's worth writing intrinsics or not.
+        /*
         return ArraysSupport.mismatch(a, aFromIndex,
                                       b, bFromIndex, aLength) < 0;
+        */
+        for (int idx = 0; idx < aLength; ++idx) {
+            if (Float.floatToIntBits(a[aFromIndex++]) != Float.floatToIntBits(b[bFromIndex++])) {
+                return false;
+            }
+        }
+        return true;
+        // END Android-changed: keep for-loop implementation due to the absence of ArraySupport
+        // intrinsics.
     }
 
     /**
@@ -3582,6 +3776,12 @@ public class Arrays {
      * @since 1.6
      */
     public static byte[] copyOf(byte[] original, int newLength) {
+        // Android-removed: TODO(b/359517996) .clone() is slower than System.arraycopy.
+        /*
+        if (newLength == original.length) {
+            return original.clone();
+        }
+        */
         byte[] copy = new byte[newLength];
         System.arraycopy(original, 0, copy, 0,
                          Math.min(original.length, newLength));
@@ -3606,6 +3806,12 @@ public class Arrays {
      * @since 1.6
      */
     public static short[] copyOf(short[] original, int newLength) {
+        // Android-removed: TODO(b/359517996) .clone() is slower than System.arraycopy.
+        /*
+        if (newLength == original.length) {
+            return original.clone();
+        }
+        */
         short[] copy = new short[newLength];
         System.arraycopy(original, 0, copy, 0,
                          Math.min(original.length, newLength));
@@ -3630,11 +3836,18 @@ public class Arrays {
      * @since 1.6
      */
     public static int[] copyOf(int[] original, int newLength) {
+        // Android-removed: TODO(b/359517996) .clone() is slower than System.arraycopy.
+        /*
+        if (newLength == original.length) {
+            return original.clone();
+        }
+        */
         int[] copy = new int[newLength];
         System.arraycopy(original, 0, copy, 0,
                          Math.min(original.length, newLength));
         return copy;
     }
+
 
     /**
      * Copies the specified array, truncating or padding with zeros (if necessary)
@@ -3654,6 +3867,12 @@ public class Arrays {
      * @since 1.6
      */
     public static long[] copyOf(long[] original, int newLength) {
+        // Android-removed: TODO(b/359517996) .clone() is slower than System.arraycopy.
+        /*
+        if (newLength == original.length) {
+            return original.clone();
+        }
+        */
         long[] copy = new long[newLength];
         System.arraycopy(original, 0, copy, 0,
                          Math.min(original.length, newLength));
@@ -3678,6 +3897,12 @@ public class Arrays {
      * @since 1.6
      */
     public static char[] copyOf(char[] original, int newLength) {
+        // Android-removed: TODO(b/359517996) .clone() is slower than System.arraycopy.
+        /*
+        if (newLength == original.length) {
+            return original.clone();
+        }
+        */
         char[] copy = new char[newLength];
         System.arraycopy(original, 0, copy, 0,
                          Math.min(original.length, newLength));
@@ -3702,6 +3927,12 @@ public class Arrays {
      * @since 1.6
      */
     public static float[] copyOf(float[] original, int newLength) {
+        // Android-removed: TODO(b/359517996) .clone() is slower than System.arraycopy.
+        /*
+        if (newLength == original.length) {
+            return original.clone();
+        }
+        */
         float[] copy = new float[newLength];
         System.arraycopy(original, 0, copy, 0,
                          Math.min(original.length, newLength));
@@ -3726,6 +3957,12 @@ public class Arrays {
      * @since 1.6
      */
     public static double[] copyOf(double[] original, int newLength) {
+        // Android-removed: TODO(b/359517996) .clone() is slower than System.arraycopy.
+        /*
+        if (newLength == original.length) {
+            return original.clone();
+        }
+        */
         double[] copy = new double[newLength];
         System.arraycopy(original, 0, copy, 0,
                          Math.min(original.length, newLength));
@@ -3750,6 +3987,12 @@ public class Arrays {
      * @since 1.6
      */
     public static boolean[] copyOf(boolean[] original, int newLength) {
+        // Android-removed: TODO(b/359517996) .clone() is slower than System.arraycopy.
+        /*
+        if (newLength == original.length) {
+            return original.clone();
+        }
+        */
         boolean[] copy = new boolean[newLength];
         System.arraycopy(original, 0, copy, 0,
                          Math.min(original.length, newLength));
@@ -3837,6 +4080,13 @@ public class Arrays {
         return copy;
     }
 
+    @ForceInline
+    private static void checkLength(int from, int to) {
+        if (to < from) {
+            throw new IllegalArgumentException(from + " > " + to);
+        }
+    }
+
     /**
      * Copies the specified range of the specified array into a new array.
      * The initial index of the range ({@code from}) must lie between zero
@@ -3864,9 +4114,21 @@ public class Arrays {
      * @since 1.6
      */
     public static byte[] copyOfRange(byte[] original, int from, int to) {
+        // Tickle the JIT to fold special cases optimally
+        // Android-changed: TODO(b/359517996) .clone() is slower than System.arraycopy.
+        /*
+        if (from != 0 || to != original.length)
+            return copyOfRangeByte(original, from, to);
+        else // from == 0 && to == original.length
+            return original.clone();
+        */
+        return copyOfRangeByte(original, from, to);
+    }
+
+    @ForceInline
+    private static byte[] copyOfRangeByte(byte[] original, int from, int to) {
+        checkLength(from, to);
         int newLength = to - from;
-        if (newLength < 0)
-            throw new IllegalArgumentException(from + " > " + to);
         byte[] copy = new byte[newLength];
         System.arraycopy(original, from, copy, 0,
                          Math.min(original.length - from, newLength));
@@ -3900,9 +4162,21 @@ public class Arrays {
      * @since 1.6
      */
     public static short[] copyOfRange(short[] original, int from, int to) {
+        // Tickle the JIT to fold special cases optimally
+        // Android-changed: TODO(b/359517996) .clone() is slower than System.arraycopy.
+        /*
+        if (from != 0 || to != original.length)
+            return copyOfRangeShort(original, from, to);
+        else // from == 0 && to == original.length
+            return original.clone();
+        */
+        return copyOfRangeShort(original, from, to);
+    }
+
+    @ForceInline
+    private static short[] copyOfRangeShort(short[] original, int from, int to) {
+        checkLength(from, to);
         int newLength = to - from;
-        if (newLength < 0)
-            throw new IllegalArgumentException(from + " > " + to);
         short[] copy = new short[newLength];
         System.arraycopy(original, from, copy, 0,
                          Math.min(original.length - from, newLength));
@@ -3936,9 +4210,21 @@ public class Arrays {
      * @since 1.6
      */
     public static int[] copyOfRange(int[] original, int from, int to) {
+        // Tickle the JIT to fold special cases optimally
+        // Android-changed: TODO(b/359517996) .clone() is slower than System.arraycopy.
+        /*
+        if (from != 0 || to != original.length)
+            return copyOfRangeInt(original, from, to);
+        else // from == 0 && to == original.length
+            return original.clone();
+        */
+        return copyOfRangeInt(original, from, to);
+    }
+
+    @ForceInline
+    private static int[] copyOfRangeInt(int[] original, int from, int to) {
+        checkLength(from, to);
         int newLength = to - from;
-        if (newLength < 0)
-            throw new IllegalArgumentException(from + " > " + to);
         int[] copy = new int[newLength];
         System.arraycopy(original, from, copy, 0,
                          Math.min(original.length - from, newLength));
@@ -3972,9 +4258,21 @@ public class Arrays {
      * @since 1.6
      */
     public static long[] copyOfRange(long[] original, int from, int to) {
+        // Tickle the JIT to fold special cases optimally
+        // Android-changed: TODO(b/359517996) .clone() is slower than System.arraycopy.
+        /*
+        if (from != 0 || to != original.length)
+            return copyOfRangeLong(original, from, to);
+        else // from == 0 && to == original.length
+            return original.clone();
+        */
+        return copyOfRangeLong(original, from, to);
+    }
+
+    @ForceInline
+    private static long[] copyOfRangeLong(long[] original, int from, int to) {
+        checkLength(from, to);
         int newLength = to - from;
-        if (newLength < 0)
-            throw new IllegalArgumentException(from + " > " + to);
         long[] copy = new long[newLength];
         System.arraycopy(original, from, copy, 0,
                          Math.min(original.length - from, newLength));
@@ -4008,9 +4306,22 @@ public class Arrays {
      * @since 1.6
      */
     public static char[] copyOfRange(char[] original, int from, int to) {
+        // Tickle the JIT to fold special cases optimally
+        // Android-changed: TODO(b/359517996) .clone() is slower than System.arraycopy.
+        /*
+        if (from != 0 || to != original.length)
+            return copyOfRangeChar(original, from, to);
+        else // from == 0 && to == original.length
+            return original.clone();
+        */
+        return copyOfRangeChar(original, from, to);
+    }
+
+
+    @ForceInline
+    private static char[] copyOfRangeChar(char[] original, int from, int to) {
+        checkLength(from, to);
         int newLength = to - from;
-        if (newLength < 0)
-            throw new IllegalArgumentException(from + " > " + to);
         char[] copy = new char[newLength];
         System.arraycopy(original, from, copy, 0,
                          Math.min(original.length - from, newLength));
@@ -4044,9 +4355,22 @@ public class Arrays {
      * @since 1.6
      */
     public static float[] copyOfRange(float[] original, int from, int to) {
+        // Tickle the JIT to fold special cases optimally
+        // Android-changed: TODO(b/359517996) .clone() is slower than System.arraycopy.
+        /*
+        if (from != 0 || to != original.length)
+            return copyOfRangeFloat(original, from, to);
+        else // from == 0 && to == original.length
+            return original.clone();
+        */
+        return copyOfRangeFloat(original, from, to);
+    }
+
+
+    @ForceInline
+    private static float[] copyOfRangeFloat(float[] original, int from, int to) {
+        checkLength(from, to);
         int newLength = to - from;
-        if (newLength < 0)
-            throw new IllegalArgumentException(from + " > " + to);
         float[] copy = new float[newLength];
         System.arraycopy(original, from, copy, 0,
                          Math.min(original.length - from, newLength));
@@ -4080,9 +4404,22 @@ public class Arrays {
      * @since 1.6
      */
     public static double[] copyOfRange(double[] original, int from, int to) {
+        // Tickle the JIT to fold special cases optimally
+        // Android-changed: TODO(b/359517996) .clone() is slower than System.arraycopy.
+        /*
+        if (from != 0 || to != original.length)
+            return copyOfRangeDouble(original, from, to);
+        else // from == 0 && to == original.length
+            return original.clone();
+        */
+        return copyOfRangeDouble(original, from, to);
+    }
+
+
+    @ForceInline
+    private static double[] copyOfRangeDouble(double[] original, int from, int to) {
+        checkLength(from, to);
         int newLength = to - from;
-        if (newLength < 0)
-            throw new IllegalArgumentException(from + " > " + to);
         double[] copy = new double[newLength];
         System.arraycopy(original, from, copy, 0,
                          Math.min(original.length - from, newLength));
@@ -4116,9 +4453,22 @@ public class Arrays {
      * @since 1.6
      */
     public static boolean[] copyOfRange(boolean[] original, int from, int to) {
+        // Tickle the JIT to fold special cases optimally
+        // Android-changed: TODO(b/359517996) .clone() is slower than System.arraycopy.
+        /*
+        if (from != 0 || to != original.length)
+            return copyOfRangeBoolean(original, from, to);
+        else // from == 0 && to == original.length
+            return original.clone();
+        */
+        return copyOfRangeBoolean(original, from, to);
+    }
+
+
+    @ForceInline
+    private static boolean[] copyOfRangeBoolean(boolean[] original, int from, int to) {
+        checkLength(from, to);
         int newLength = to - from;
-        if (newLength < 0)
-            throw new IllegalArgumentException(from + " > " + to);
         boolean[] copy = new boolean[newLength];
         System.arraycopy(original, from, copy, 0,
                          Math.min(original.length - from, newLength));
@@ -4136,6 +4486,10 @@ public class Arrays {
      * <p>The returned list implements the optional {@code Collection} methods, except
      * those that would change the size of the returned list. Those methods leave
      * the list unchanged and throw {@link UnsupportedOperationException}.
+     *
+     * <p>If the specified array's actual component type differs from the type
+     * parameter T, this can result in operations on the returned list throwing an
+     * {@code ArrayStoreException}.
      *
      * @apiNote
      * This method acts as bridge between array-based and collection-based
@@ -4345,16 +4699,15 @@ public class Arrays {
      * @return a content-based hash code for {@code a}
      * @since 1.5
      */
-    public static int hashCode(long a[]) {
-        if (a == null)
+    public static int hashCode(long[] a) {
+        if (a == null) {
             return 0;
-
+        }
         int result = 1;
         for (long element : a) {
             int elementHash = (int)(element ^ (element >>> 32));
             result = 31 * result + elementHash;
         }
-
         return result;
     }
 
@@ -4374,15 +4727,15 @@ public class Arrays {
      * @return a content-based hash code for {@code a}
      * @since 1.5
      */
-    public static int hashCode(int a[]) {
-        if (a == null)
+    public static int hashCode(int[] a) {
+        if (a == null) {
             return 0;
-
-        int result = 1;
-        for (int element : a)
-            result = 31 * result + element;
-
-        return result;
+        }
+        return switch (a.length) {
+            case 0 -> 1;
+            case 1 -> 31 + a[0];
+            default -> ArraysSupport.vectorizedHashCode(a, 0, a.length, 1, ArraysSupport.T_INT);
+        };
     }
 
     /**
@@ -4401,15 +4754,15 @@ public class Arrays {
      * @return a content-based hash code for {@code a}
      * @since 1.5
      */
-    public static int hashCode(short a[]) {
-        if (a == null)
+    public static int hashCode(short[] a) {
+        if (a == null) {
             return 0;
-
-        int result = 1;
-        for (short element : a)
-            result = 31 * result + element;
-
-        return result;
+        }
+        return switch (a.length) {
+            case 0 -> 1;
+            case 1 -> 31 + (int)a[0];
+            default -> ArraysSupport.vectorizedHashCode(a, 0, a.length, 1, ArraysSupport.T_SHORT);
+        };
     }
 
     /**
@@ -4428,15 +4781,15 @@ public class Arrays {
      * @return a content-based hash code for {@code a}
      * @since 1.5
      */
-    public static int hashCode(char a[]) {
-        if (a == null)
+    public static int hashCode(char[] a) {
+        if (a == null) {
             return 0;
-
-        int result = 1;
-        for (char element : a)
-            result = 31 * result + element;
-
-        return result;
+        }
+        return switch (a.length) {
+            case 0 -> 1;
+            case 1 -> 31 + (int)a[0];
+            default -> ArraysSupport.vectorizedHashCode(a, 0, a.length, 1, ArraysSupport.T_CHAR);
+        };
     }
 
     /**
@@ -4455,15 +4808,15 @@ public class Arrays {
      * @return a content-based hash code for {@code a}
      * @since 1.5
      */
-    public static int hashCode(byte a[]) {
-        if (a == null)
+    public static int hashCode(byte[] a) {
+        if (a == null) {
             return 0;
-
-        int result = 1;
-        for (byte element : a)
-            result = 31 * result + element;
-
-        return result;
+        }
+        return switch (a.length) {
+            case 0 -> 1;
+            case 1 -> 31 + (int)a[0];
+            default -> ArraysSupport.vectorizedHashCode(a, 0, a.length, 1, ArraysSupport.T_BYTE);
+        };
     }
 
     /**
@@ -4482,7 +4835,7 @@ public class Arrays {
      * @return a content-based hash code for {@code a}
      * @since 1.5
      */
-    public static int hashCode(boolean a[]) {
+    public static int hashCode(boolean[] a) {
         if (a == null)
             return 0;
 
@@ -4509,7 +4862,7 @@ public class Arrays {
      * @return a content-based hash code for {@code a}
      * @since 1.5
      */
-    public static int hashCode(float a[]) {
+    public static int hashCode(float[] a) {
         if (a == null)
             return 0;
 
@@ -4536,7 +4889,7 @@ public class Arrays {
      * @return a content-based hash code for {@code a}
      * @since 1.5
      */
-    public static int hashCode(double a[]) {
+    public static int hashCode(double[] a) {
         if (a == null)
             return 0;
 
@@ -4569,7 +4922,7 @@ public class Arrays {
      * @see #deepHashCode(Object[])
      * @since 1.5
      */
-    public static int hashCode(Object a[]) {
+    public static int hashCode(Object[] a) {
         if (a == null)
             return 0;
 
@@ -4610,7 +4963,7 @@ public class Arrays {
      * @see #hashCode(Object[])
      * @since 1.5
      */
-    public static int deepHashCode(Object a[]) {
+    public static int deepHashCode(Object[] a) {
         if (a == null)
             return 0;
 
@@ -5695,8 +6048,8 @@ public class Arrays {
      * <p>The comparison is consistent with
      * {@link #equals(boolean[], int, int, boolean[], int, int) equals}, more
      * specifically the following holds for arrays {@code a} and {@code b} with
-     * specified ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively:
+     * specified ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively:
      * <pre>{@code
      *     Arrays.equals(a, aFromIndex, aToIndex, b, bFromIndex, bToIndex) ==
      *         (Arrays.compare(a, aFromIndex, aToIndex, b, bFromIndex, bToIndex) == 0)
@@ -5830,8 +6183,8 @@ public class Arrays {
      * <p>The comparison is consistent with
      * {@link #equals(byte[], int, int, byte[], int, int) equals}, more
      * specifically the following holds for arrays {@code a} and {@code b} with
-     * specified ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively:
+     * specified ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively:
      * <pre>{@code
      *     Arrays.equals(a, aFromIndex, aToIndex, b, bFromIndex, bToIndex) ==
      *         (Arrays.compare(a, aFromIndex, aToIndex, b, bFromIndex, bToIndex) == 0)
@@ -6085,8 +6438,8 @@ public class Arrays {
      * <p>The comparison is consistent with
      * {@link #equals(short[], int, int, short[], int, int) equals}, more
      * specifically the following holds for arrays {@code a} and {@code b} with
-     * specified ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively:
+     * specified ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively:
      * <pre>{@code
      *     Arrays.equals(a, aFromIndex, aToIndex, b, bFromIndex, bToIndex) ==
      *         (Arrays.compare(a, aFromIndex, aToIndex, b, bFromIndex, bToIndex) == 0)
@@ -6339,8 +6692,8 @@ public class Arrays {
      * <p>The comparison is consistent with
      * {@link #equals(char[], int, int, char[], int, int) equals}, more
      * specifically the following holds for arrays {@code a} and {@code b} with
-     * specified ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively:
+     * specified ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively:
      * <pre>{@code
      *     Arrays.equals(a, aFromIndex, aToIndex, b, bFromIndex, bToIndex) ==
      *         (Arrays.compare(a, aFromIndex, aToIndex, b, bFromIndex, bToIndex) == 0)
@@ -6474,8 +6827,8 @@ public class Arrays {
      * <p>The comparison is consistent with
      * {@link #equals(int[], int, int, int[], int, int) equals}, more
      * specifically the following holds for arrays {@code a} and {@code b} with
-     * specified ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively:
+     * specified ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively:
      * <pre>{@code
      *     Arrays.equals(a, aFromIndex, aToIndex, b, bFromIndex, bToIndex) ==
      *         (Arrays.compare(a, aFromIndex, aToIndex, b, bFromIndex, bToIndex) == 0)
@@ -6728,8 +7081,8 @@ public class Arrays {
      * <p>The comparison is consistent with
      * {@link #equals(long[], int, int, long[], int, int) equals}, more
      * specifically the following holds for arrays {@code a} and {@code b} with
-     * specified ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively:
+     * specified ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively:
      * <pre>{@code
      *     Arrays.equals(a, aFromIndex, aToIndex, b, bFromIndex, bToIndex) ==
      *         (Arrays.compare(a, aFromIndex, aToIndex, b, bFromIndex, bToIndex) == 0)
@@ -6982,8 +7335,8 @@ public class Arrays {
      * <p>The comparison is consistent with
      * {@link #equals(float[], int, int, float[], int, int) equals}, more
      * specifically the following holds for arrays {@code a} and {@code b} with
-     * specified ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively:
+     * specified ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively:
      * <pre>{@code
      *     Arrays.equals(a, aFromIndex, aToIndex, b, bFromIndex, bToIndex) ==
      *         (Arrays.compare(a, aFromIndex, aToIndex, b, bFromIndex, bToIndex) == 0)
@@ -7117,8 +7470,8 @@ public class Arrays {
      * <p>The comparison is consistent with
      * {@link #equals(double[], int, int, double[], int, int) equals}, more
      * specifically the following holds for arrays {@code a} and {@code b} with
-     * specified ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively:
+     * specified ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively:
      * <pre>{@code
      *     Arrays.equals(a, aFromIndex, aToIndex, b, bFromIndex, bToIndex) ==
      *         (Arrays.compare(a, aFromIndex, aToIndex, b, bFromIndex, bToIndex) == 0)
@@ -7276,8 +7629,8 @@ public class Arrays {
      * <p>The comparison is consistent with
      * {@link #equals(Object[], int, int, Object[], int, int) equals}, more
      * specifically the following holds for arrays {@code a} and {@code b} with
-     * specified ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively:
+     * specified ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively:
      * <pre>{@code
      *     Arrays.equals(a, aFromIndex, aToIndex, b, bFromIndex, bToIndex) ==
      *         (Arrays.compare(a, aFromIndex, aToIndex, b, bFromIndex, bToIndex) == 0)
@@ -7559,8 +7912,8 @@ public class Arrays {
      * Otherwise, there is no mismatch.
      *
      * <p>Two non-{@code null} arrays, {@code a} and {@code b} with specified
-     * ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively, share a common
+     * ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively, share a common
      * prefix of length {@code pl} if the following expression is true:
      * <pre>{@code
      *     pl >= 0 &&
@@ -7572,8 +7925,8 @@ public class Arrays {
      * elements from each array mismatch.
      *
      * <p>Two non-{@code null} arrays, {@code a} and {@code b} with specified
-     * ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively, share a proper
+     * ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively, share a proper
      * prefix if the following expression is true:
      * <pre>{@code
      *     (aToIndex - aFromIndex) != (bToIndex - bFromIndex) &&
@@ -7686,8 +8039,8 @@ public class Arrays {
      * Otherwise, there is no mismatch.
      *
      * <p>Two non-{@code null} arrays, {@code a} and {@code b} with specified
-     * ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively, share a common
+     * ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively, share a common
      * prefix of length {@code pl} if the following expression is true:
      * <pre>{@code
      *     pl >= 0 &&
@@ -7699,8 +8052,8 @@ public class Arrays {
      * elements from each array mismatch.
      *
      * <p>Two non-{@code null} arrays, {@code a} and {@code b} with specified
-     * ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively, share a proper
+     * ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively, share a proper
      * prefix if the following expression is true:
      * <pre>{@code
      *     (aToIndex - aFromIndex) != (bToIndex - bFromIndex) &&
@@ -7813,8 +8166,8 @@ public class Arrays {
      * Otherwise, there is no mismatch.
      *
      * <p>Two non-{@code null} arrays, {@code a} and {@code b} with specified
-     * ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively, share a common
+     * ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively, share a common
      * prefix of length {@code pl} if the following expression is true:
      * <pre>{@code
      *     pl >= 0 &&
@@ -7826,8 +8179,8 @@ public class Arrays {
      * elements from each array mismatch.
      *
      * <p>Two non-{@code null} arrays, {@code a} and {@code b} with specified
-     * ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively, share a proper
+     * ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively, share a proper
      * prefix if the following expression is true:
      * <pre>{@code
      *     (aToIndex - aFromIndex) != (bToIndex - bFromIndex) &&
@@ -7940,8 +8293,8 @@ public class Arrays {
      * Otherwise, there is no mismatch.
      *
      * <p>Two non-{@code null} arrays, {@code a} and {@code b} with specified
-     * ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively, share a common
+     * ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively, share a common
      * prefix of length {@code pl} if the following expression is true:
      * <pre>{@code
      *     pl >= 0 &&
@@ -7953,8 +8306,8 @@ public class Arrays {
      * elements from each array mismatch.
      *
      * <p>Two non-{@code null} arrays, {@code a} and {@code b} with specified
-     * ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively, share a proper
+     * ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively, share a proper
      * prefix if the following expression is true:
      * <pre>{@code
      *     (aToIndex - aFromIndex) != (bToIndex - bFromIndex) &&
@@ -8067,8 +8420,8 @@ public class Arrays {
      * Otherwise, there is no mismatch.
      *
      * <p>Two non-{@code null} arrays, {@code a} and {@code b} with specified
-     * ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively, share a common
+     * ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively, share a common
      * prefix of length {@code pl} if the following expression is true:
      * <pre>{@code
      *     pl >= 0 &&
@@ -8080,8 +8433,8 @@ public class Arrays {
      * elements from each array mismatch.
      *
      * <p>Two non-{@code null} arrays, {@code a} and {@code b} with specified
-     * ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively, share a proper
+     * ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively, share a proper
      * prefix if the following expression is true:
      * <pre>{@code
      *     (aToIndex - aFromIndex) != (bToIndex - bFromIndex) &&
@@ -8194,8 +8547,8 @@ public class Arrays {
      * Otherwise, there is no mismatch.
      *
      * <p>Two non-{@code null} arrays, {@code a} and {@code b} with specified
-     * ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively, share a common
+     * ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively, share a common
      * prefix of length {@code pl} if the following expression is true:
      * <pre>{@code
      *     pl >= 0 &&
@@ -8207,8 +8560,8 @@ public class Arrays {
      * elements from each array mismatch.
      *
      * <p>Two non-{@code null} arrays, {@code a} and {@code b} with specified
-     * ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively, share a proper
+     * ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively, share a proper
      * prefix if the following expression is true:
      * <pre>{@code
      *     (aToIndex - aFromIndex) != (bToIndex - bFromIndex) &&
@@ -8321,8 +8674,8 @@ public class Arrays {
      * Otherwise, there is no mismatch.
      *
      * <p>Two non-{@code null} arrays, {@code a} and {@code b} with specified
-     * ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively, share a common
+     * ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively, share a common
      * prefix of length {@code pl} if the following expression is true:
      * <pre>{@code
      *     pl >= 0 &&
@@ -8334,8 +8687,8 @@ public class Arrays {
      * elements from each array mismatch.
      *
      * <p>Two non-{@code null} arrays, {@code a} and {@code b} with specified
-     * ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively, share a proper
+     * ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively, share a proper
      * prefix if the following expression is true:
      * <pre>{@code
      *     (aToIndex - aFromIndex) != (bToIndex - bFromIndex) &&
@@ -8448,8 +8801,8 @@ public class Arrays {
      * Otherwise, there is no mismatch.
      *
      * <p>Two non-{@code null} arrays, {@code a} and {@code b} with specified
-     * ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively, share a common
+     * ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively, share a common
      * prefix of length {@code pl} if the following expression is true:
      * <pre>{@code
      *     pl >= 0 &&
@@ -8461,8 +8814,8 @@ public class Arrays {
      * elements from each array mismatch.
      *
      * <p>Two non-{@code null} arrays, {@code a} and {@code b} with specified
-     * ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively, share a proper
+     * ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively, share a proper
      * prefix if the following expression is true:
      * <pre>{@code
      *     (aToIndex - aFromIndex) != (bToIndex - bFromIndex) &&
@@ -8579,8 +8932,8 @@ public class Arrays {
      * Otherwise, there is no mismatch.
      *
      * <p>Two non-{@code null} arrays, {@code a} and {@code b} with specified
-     * ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively, share a common
+     * ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively, share a common
      * prefix of length {@code pl} if the following expression is true:
      * <pre>{@code
      *     pl >= 0 &&
@@ -8592,8 +8945,8 @@ public class Arrays {
      * elements from each array mismatch.
      *
      * <p>Two non-{@code null} arrays, {@code a} and {@code b} with specified
-     * ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively, share a proper
+     * ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively, share a proper
      * prefix if the following expression is true:
      * <pre>{@code
      *     (aToIndex - aFromIndex) != (bToIndex - bFromIndex) &&
@@ -8725,8 +9078,8 @@ public class Arrays {
      * Otherwise, there is no mismatch.
      *
      * <p>Two non-{@code null} arrays, {@code a} and {@code b} with specified
-     * ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively, share a common
+     * ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively, share a common
      * prefix of length {@code pl} if the following expression is true:
      * <pre>{@code
      *     pl >= 0 &&
@@ -8738,8 +9091,8 @@ public class Arrays {
      * elements from each array mismatch.
      *
      * <p>Two non-{@code null} arrays, {@code a} and {@code b} with specified
-     * ranges [{@code aFromIndex}, {@code atoIndex}) and
-     * [{@code bFromIndex}, {@code btoIndex}) respectively, share a proper
+     * ranges [{@code aFromIndex}, {@code aToIndex}) and
+     * [{@code bFromIndex}, {@code bToIndex}) respectively, share a proper
      * prefix if the following expression is true:
      * <pre>{@code
      *     (aToIndex - aFromIndex) != (bToIndex - bFromIndex) &&
